--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,12 +1,28 @@
 <h1>Books</h1>
-<%= form_with model:@book, local:true do |f| %>
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Body</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
 
-<main>
-<% @books.each do |book| %>
-  <div class="title"><%= link_to book.title, book_path(book) %></div>
-  <div class="body"><%= link_to book.body, book_path(book) %></div>
-<% end %>
-</main>
+  <tbody>
+    <% @books.each do |book| %>
+    <tr>
+      <td><%= book.title %></td>
+      <td><%= book.body %></td>
+      <td><%= link_to "Show", book_path(book) %></td>
+      <td><%= link_to "Edit", book_path(book) %></td>
+      <td><%= link_to "Destroy", book_path(book) %></td>
+    </tr>
+    <% end %>
+  </tbody>
+
+</table>
+
+<%= form_with model:@book, local:true do |f| %>
 
 <h1>New book</h1>
 <p>Title</p>
