--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,8 +14,8 @@
       <td><%= book.title %></td>
       <td><%= book.body %></td>
       <td><%= link_to "Show", book_path(book) %></td>
-      <td><%= link_to "Edit", book_path(book) %></td>
-      <td><%= link_to "Destroy", book_path(book) %></td>
+      <td><%= link_to "Edit", edit_book_path(book) %></td>
+      <td><%= link_to "Destroy", book_path(book), method: :delete %></td>
     </tr>
     <% end %>
   </tbody>
