--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,8 @@
+<% if flash[:notice] %>
+  <p id="notice"><%= flash[:notice] %></p>
+<% end %>
+
+<p id="notice"></p>
 <h1>Books</h1>
 <table>
   <thead>
@@ -22,16 +27,21 @@
 
 </table>
 
+<h2>New book</h2>
 <%= form_with model:@book, local:true do |f| %>
 
-<h1>New book</h1>
-<p>Title</p>
+<div class="field">
+<label for="book_title">Title</label>
 <%= f.text_field :title %>
+</div>
 
-<p>Body</p>
+<div class="field">
+<label for="book_body">Body</label>
 <%= f.text_area :body %>
-<br>
+</div>
 
+<div class="actions">
 <%= f.submit "Create Book" %>
+</div>
 
 <% end %>
