--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,3 +1,7 @@
+<% if flash[:notice] %>
+  <p id="notice"><%= flash[:notice] %></p>
+<% end %>
+
 <h1>Editing Book</h1>
 <%= form_with model:@book, local:true do |f| %>
 <div class="field">
