--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -30,6 +30,16 @@
 <h2>New book</h2>
 <%= form_with model:@book, local:true do |f| %>
 
+<% if @book.errors.any? %>
+  <div id="error_explanation">
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <div class="field">
 <label for="book_title">Title</label>
 <%= f.text_field :title %>
