--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -4,6 +4,20 @@
 
 <h1>Editing Book</h1>
 <%= form_with model:@book, local:true do |f| %>
+
+<% if @book.errors.any? %>
+  <div id="error_explanation">
+    <h2>
+    <%= "#{@book.errors.size} errors prohibited this book from being saved:" %>
+    </h2>
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <div class="field">
   <label for="book_title">Title</label>
   <%= f.text_field :title %>
