--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -32,6 +32,9 @@
 
 <% if @book.errors.any? %>
   <div id="error_explanation">
+    <h2>
+    <%= "#{@book.errors.size} errors prohibited this book from being saved:" %>
+    </h2>
     <ul>
       <% @book.errors.full_messages.each do |message| %>
       <li><%= message %></li>
